force-app/main/default/objects/ContactDocument__c/ContactDocument__c.object-meta.xml
<CustomObject>
    <description>Junction object linking Contacts and Documents.</description>
    <label>Contact Document</label>
    <nameField>
        <label>Contact Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>