force-app/main/default/objects/ContactDocument__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contact Documents</relationshipLabel>
    <relationshipName>Contact_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>