force-app/main/default/objects/ContactDocument__c/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document</label>
    <referenceTo>Document__c</referenceTo>
    <relationshipLabel>Contact Documents</relationshipLabel>
    <relationshipName>Contact_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>